--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -32,76 +32,11 @@ en: &DEFAULT_EN
         icon: fas fa-camera
   paper_news:
      title: "论著"
-     text: "PAPERS"
-     section: papers
-     list_news:
-      - title: "4 papers Have Been Accepted by IJCAI 2021!"
-      - title: "4 Papers Have Been Accepted by CVPR 2021!" 
-     list_journal:
-      - title: "On Unifying Multi-View Self-Representation for Clustering by Tensor Multi-Rank Minimization"
-        author: "Yuan Xie, Dacheng Tao, Wensheng Zhang, Yan Liu, Lei Zhang, Yanyun Qu"
-        publication: "International Journal of Computer Vision (IJCV), 2018"
-      - title: "Generalized Latent Multi-View Subspace Clustering"
-        author: "Changqing Zhang, Huazhu Fu, Qinghua Hu, Xiaochun Chao, Yuan Xie, Dacheng Tao, Dong Xu"
-        publication: "IEEE Trans. on Pattern Analysis and Machine Intelligence (IEEE TPAMI), 2020" 
-      - title: "Colored Fused Filament Fabrication"
-        author: "Haichuan Song, Jonas Martinez, Pierre Bedell, Noemie Vennin, Sylvain Lefebvre"
-        publication: "ACM Transactions on Graphics (ACM TOG), 2019"
-      - title: "Joint Deep Multi-View Learning for Image Clustering"
-        author: "Yuan Xie, Bingqian Lin, Yanyun Qu, Cuihua Li, Wensheng Zhang, Lizhuang Ma, Yonggang Wen, Dacheng Tao"
-        publication: "IEEE Trans. on Knowledge and Data Engineering (IEEE TKDE), 2020"
-      - title: "Robust Kernelized Multi-View Self-Representation for Subspace Clustering"
-        author: "Yuan Xie, Jinyan Liu, Yanyun Qu, Dacheng Tao, Wensheng Zhang, Longquan Dai, Lizhuang Ma"
-        publication: "IEEE Trans. on Neural Networks and Learning Systems (IEEE TNNLS), 2020"
-      - title: "Tensor Multi-task Learning for Person Re-identification"
-        author: "Zhizhong Zhang*, Yuan Xie*, Yongqiang Tang, Wensheng Zhang, Qi Tian"
-        publication: "IEEE Trans. on Image Processing (IEEE TIP), 2019"
-      - title: "Learning to Align via Wasserstein for Person Re-Identification"
-        author: "Zhizhong Zhang*, Yuan Xie*, Yongqiang Tang, Wensheng Zhang, Qi Tian"
-        publication: "IEEE Trans. on Image Processing (IEEE TIP), 2020"
-      - title: "Hyper-Laplacian Regularized Multilinear Multiview Self-Representation for Clustering and Semisupervised Learning"
-        author: "Yuan Xie, Dacheng Tao, Yanyun Qu, Wensheng Zhang, Longquan Dai"
-        publication: "IEEE Trans. on Cybernetics, 2020"
-      - title: "Effective Image Retrieval via Multilinear Multi-Index Fusion"
-        author: "Zhizhong Zhang*, Yuan Xie*, Wensheng Zhang, Qi Tian"
-        publication: "IEEE Trans. on Multimedia (IEEE TMM), 2019"
-      - title: "Tensor Multi-Elastic Kernel Self-Paced Learning for Time Series Clustering"
-        author: "Yongqiang Tang*, Yuan Xie*, Xuebing Yang, Jinghao Niu, Wensheng Zhang"
-        publication: "IEEE Trans. on Knowledge and Data Engineering (IEEE TKDE), 2019"
-     list_conference:
-      - title: "Boundary-Aware Geometric Encoding for Semantic Segmentation of Point Clouds"
-        author: "Jingyu Gong, Jiachen Xu, Xin Tan, Jie Zhou, Yanyun Qu, Yuan Xie*, Lizhuang Ma"
-        publication: "AAAI, 2021"
-      - title: "Weakly Supervised Semantic Segmentation for Large-Scale Point Cloud"
-        author: "Yachao Zhang, Zonghao Li, Yuan Xie*, Yanyun Qu, Cuihua Li, Tao Mei"
-        publication: "AAAI, 2021"
-      - title: "LatticeNet: Towards Lightweight Image Super-resolution with Lattice Block"
-        author: "Xiaotong Luo*, Yuan Xie*, Yulun Zhang, Yanyun Qu, Cuihua Li, Yun Fu"
-        publication: "ECCV, 2020"
-      - title: "Latent Regularized Generative Dual Adversarial Network for Abnormal Detection"
-        author: "Chengwei Chen, Jing Liu, Yuan Xie*, Yinxiao Ban, Chunyun Wu, Yiqing Tao, Haichuan Song"
-        publication: "IJCAI, 2020"
-      - title: "Meta Segmentation Network for Ultra-Resolution Medical Image"
-        author: "Tong Wu, Bicheng Dai, Shuxing Chen, Yanyun Qu, Yuan Xie*"
-        publication: "IJCAI, 2020"
-      - title: "SceneEncoder: Scene-Aware Semantic Segmentation of Point Clouds with Learnable Scene Descriptor"
-        author: "Jiacheng Xu, Jingyu Gong, Jie Zhou, Xin Tan, Yuan Xie*, Lizhuang Ma*"
-        publication: "IJCAI, 2020"
-      - title: "Distill Image Dehazing with Heterogeneous Task Imitation"
-        author: "Ming Hong* , Yuan Xie* , Cuihua Li, Yanyun Qu"
-        publication: "CVPR, 2020"
-      - title: "Hierarchical Knowledge Squeezed Adversarial Network Compression"
-        author: "Peng Li, Changyong Shu, Yuan Xie* , Yanyun Qu, Hui Kong"
-        publication: "AAAI, 2020"
-      - title: "Patch Proposal Network for Fast Semantic Segmentation of High-Resolution Images"
-        author: "Tong Wu, Zhenzhen Lei, Bingqian Lin, Cuihua Li, Yanyun Qu, Yuan Xie*"
-        publication: "AAAI, 2020"
-      - title: "Enhanced Pix2pix Dehazing Network"
-        author: "Yanyun Qu, Yizi Chen, Jingying Huang, Yuan Xie*"
-        publication: "CVPR, 2019"
-      - title: "Joint-Attention Discriminator for Accurate Super-Resolution via Adversarial Training"
-        author: "Rong Chen*, Yuan Xie*, Xiaotong Luo, Yanyun Qu, Cuihua Li"
-        publication: "ACM MM, 2019"
+     section: paper_nes
+     list_news: 
+      - title: "Congratulations! 4 Papers Have Been Accepted by IJCAI 2021!"
+      - title: "Congratulations! 4 Papers Have Been Accepted by CVPR 2021!" 
+  
 
   papers:
      title: "论著"
