--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -30,9 +30,10 @@ en: &DEFAULT_EN
       - title: "3D感知"
         desc: "三维点云分析（主要包括形状识别、室内场景语义分割、面向自动驾驶的大规模点云语义分割和检测）"
         icon: fas fa-camera
+
   paper_news:
-     title: "论著"
-     section: paper_nes
+     title: "News"
+     section: paper_news
      list_news: 
       - title: "Congratulations! 4 Papers Have Been Accepted by IJCAI 2021!"
       - title: "Congratulations! 4 Papers Have Been Accepted by CVPR 2021!" 
